phpfpm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpfpm
    tier: backend
  name: phpfpm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpfpm
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: phpfpm
        tier: backend
    spec:
      containers:
      - image: php:8.2-fpm
        name: phpfpm
        ports:
          - containerPort: 9000
        resources: {}
        volumeMounts:
        - name: contents
          mountPath: /var/www/html
          readOnly: true
      volumes:
      - name: contents
        persistentVolumeClaim:
          claimName: nginx-pvc
status: {}
