phpfpm/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpfpm
    tier: backend
  name: phpfpm-svc
spec:
  ports:
  - port: 9000
    protocol: TCP
  selector:
    app: phpfpm
    tier: backend
