phpfpm/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpfpm
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`php.labngo`)
      priority: 10
      services:
        - name: phpfpm-svc
          port: 80
  tls:
    certResolver: default
